--- a/package.json
+++ b/package.json
@@ -7,39 +7,29 @@
     "url": "https://muhajir.dev"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
     "@fullhuman/postcss-purgecss": "^1.2.0",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/svelte": "^5.1.9",
     "autoprefixer": "^9.6.0",
-    "babel-loader": "^8.0.6",
+    "axios": "^0.19.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.17",
     "postcss-import": "^12.0.1",
     "rollup": "^1.10.1",
     "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-livereload": "^1.0.1",
+    "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^4.0.4",
     "sirv-cli": "^0.4.0",
-    "svelte": "^3.6.8",
-    "svelte-loader": "^2.13.5",
+    "svelte": "^3.0.0",
     "svelte-preprocess": "^2.14.0",
-    "tailwindcss": "^1.0.3",
-    "ws": ">=3.3.1"
+    "tailwindcss": "^1.0.3"
   },
   "scripts": {
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public",
-    "start:dev": "sirv public --dev",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "dependencies": {}
+    "start:dev": "sirv public --dev"
+  }
 }
