--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "autoprefixer": "^9.6.0",
     "axios": "^0.19.0",
+    "browserify": "^16.5.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.17",
     "postcss-import": "^12.0.1",
+    "require": "^2.4.20",
     "rollup": "^1.10.1",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-livereload": "^1.0.4",
@@ -31,5 +33,13 @@
     "dev": "run-p start:dev autobuild",
     "start": "sirv public",
     "start:dev": "sirv public --dev"
+  },
+  "dependencies": {
+    "cross-fetch": "^3.0.4",
+    "es6-promise": "^4.2.8",
+    "google-scholar": "^1.5.1",
+    "isomorphic-fetch": "^2.2.1",
+    "rollup-plugin-json": "^4.0.0",
+    "whatwg-fetch": "^3.0.0"
   }
 }
