--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
     "url": "https://muhajir.dev"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
-    "autoprefixer": "^9.6.0",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "autoprefixer": "^9.7.0",
     "axios": "^0.19.0",
     "browserify": "^16.5.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.17",
+    "postcss": "^7.0.21",
     "postcss-import": "^12.0.1",
     "require": "^2.4.20",
-    "rollup": "^1.10.1",
+    "rollup": "^1.26.0",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-svelte": "^5.1.0",
     "rollup-plugin-terser": "^4.0.4",
-    "sirv-cli": "^0.4.0",
-    "svelte": "^3.0.0",
-    "svelte-preprocess": "^2.14.0",
-    "tailwindcss": "^1.0.3"
+    "sirv-cli": "^0.4.5",
+    "svelte": "^3.12.1",
+    "svelte-preprocess": "^2.16.0",
+    "tailwindcss": "^1.1.3"
   },
   "scripts": {
     "build": "rollup -c",
@@ -36,10 +36,14 @@
   },
   "dependencies": {
     "cross-fetch": "^3.0.4",
+    "d3-force": "^2.0.1",
+    "elgrapho": "^2.4.0",
     "es6-promise": "^4.2.8",
     "google-scholar": "^1.5.1",
     "isomorphic-fetch": "^2.2.1",
+    "ngraph.graph": "^18.0.3",
     "rollup-plugin-json": "^4.0.0",
+    "vivagraphjs": "^0.12.0",
     "whatwg-fetch": "^3.0.0"
   }
 }
